# gedit-plugin-session-restore

./: LICENSE  README.md  meson.build  sessionrestore.c  sessionrestore.plugin
docs/: README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.zh.md
